--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -105,7 +105,7 @@ main {
       text-align: center;
       font-size: 22px;
       margin-top: 0px;
-      color: #aaa;
+      color: #222222;
       white-space: pre-wrap;
       line-height: normal;
     }
@@ -139,7 +139,7 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   a {
-    margin-bottom: .5em;
+    margin-bottom: 0.5em;
   }
   li {
     i {
@@ -164,11 +164,11 @@ main {
 
     a {
       display: block;
-      font-family: 'Merriweather';
+      font-family: "Merriweather";
       text-align: center;
       padding: 1rem 0;
       text-decoration: none;
-      border-bottom: 1px solid #ececec;
+      border-bottom: 1px solid #222222;
 
       @media screen and (max-width: $mobileW) {
         padding: 2rem 0;
@@ -178,7 +178,7 @@ main {
 }
 
 .post-wrapper {
-  border-bottom: 1px solid #ececec;
+  border-bottom: 1px solid #222222;
   margin-bottom: 1rem;
   padding-bottom: 1rem;
 }
@@ -271,7 +271,7 @@ main {
   margin: 0 0 0.67em 0;
   display: flex;
   align-items: baseline;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #222222;
 }
 
 #posts-label {
@@ -286,7 +286,8 @@ main {
   transition: width 0.1s;
 }
 table {
-  th, td {
+  th,
+  td {
     padding: 8px 13px;
     border: 1px solid #dfe2e5;
   }
@@ -328,7 +329,7 @@ footer {
     flex-direction: column;
     align-items: center;
     margin: 0 40px;
-    @media screen and (max-width: $smallMobileW){
+    @media screen and (max-width: $smallMobileW) {
       margin: 0 20px;
     }
     border-top: 1px solid #eee;
