--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -245,7 +245,7 @@ main {
 .post {
   font-family: "Merriweather", sans-serif;
   font-weight: 300;
-  color: #222;
+  color: black;
   line-height: 1.9em;
   p {
     margin-top: 10px;
