ADD : 매일메일 포스팅 및 TIL 리포지토리에 작성했던 글 옮김

--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -1,6 +1,11 @@
 // Typography
 // stylelint-disable selector-no-type, selector-max-type, selector-max-specificity, selector-max-id
 
+// 전체적인 폰트 크기 조정 (custom)
+body {
+  @include fs-3;
+}
+
 h1,
 .text-alpha {
   font-weight: 300;
